# mqtt-influxdb-gateway

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.github/workflows/: auto-approve-for-owners.yaml
src/: constants.py  influx_db.py  main.py  mapper.py  settings.py  utils.py
tasks/: docker_build.py
tests/: conftest.py
