[tool.poetry]
name = "mqtt_influxdb_gateway"
version = "0.1.0"
description = "An MQTT gateway sending data to InfluxDB"
authors = ["Radek Lát <radek.lat@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
influxdb-client = {extras = ["ciso"], version = "^1.22.0"}
paho-mqtt = "^1.6.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
